tests/fixtures/errors/MISSING_ON__B.tsl
DROP stick 2 WITH amount = 10
